--- a/components/Home/RecentMatches/index.module.css
+++ b/components/Home/RecentMatches/index.module.css
@@ -13,7 +13,7 @@
 
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 1fr);
+  grid-template-rows: 1fr;
   padding-left: 10px;
   overflow-x: hidden;
   overflow-y: scroll;
